--- a/6s/ra-men2/css/style.css
+++ b/6s/ra-men2/css/style.css
@@ -1,26 +1,51 @@
 /* CSS Document */
 body {
   margin: 0;
-  padding: 0; }
+  padding: 0;
+}
 
 ul.hmenu {
   padding-left: 15px;
   background-color: red;
-  text-align: center; }
-  ul.hmenu li {
-    width: 180px;
-    display: inline-block;
-    background-color: red;
-    margin: 0; }
-  ul.hmenu a {
-    color: white;
-    line-height: 40px;
-    text-decoration: none;
-    font-weight: bold;
-    text-align: center;
-    display: block; }
-    ul.hmenu a:hover {
-      background-color: #FB88A;
-      color: #6A0204; }
-    ul.hmenu a.active {
-      color: black; }
+  text-align: center;
+  margin-top: 0;
+}
+
+ul.hmenu li {
+  width: 180px;
+  display: inline-block;
+  background-color: red;
+}
+
+ul.hmenu a {
+  color: white;
+  line-height: 40px;
+  text-decoration: none;
+  font-weight: bold;
+  text-align: center;
+  display: block;
+}
+
+ul.hmenu a:hover {
+  background-color: #FB88A0;
+  color: #6A0204;
+}
+
+ul.hmenu a.active {
+  color: black;
+}
+
+.header {
+  background-color: black;
+}
+
+.header .logo {
+  height: 50px;
+  margin: 10px 10px 8px 20px;
+}
+
+.article {
+  width: 700px;
+  margin: 0 auto;
+}
+/*# sourceMappingURL=style.css.map */
