--- a/6s/ra-men2/css/style.scss
+++ b/6s/ra-men2/css/style.scss
@@ -9,13 +9,13 @@ ul {
 	&.hmenu {
 		padding-left: 15px;
 		background-color: red;
-		text-align: center;
+    text-align: center;
+    margin-top: 0;
 		
 		li {
 			width: 180px;
 			display: inline-block;
 			background-color: red;
-			margin: 0;
 		}
 		
 		a {
@@ -36,4 +36,19 @@ ul {
 			}
 		}
 	}
+}
+
+.header{
+  background-color: black;
+  // height: 70px;
+
+  .logo{
+    height: 50px;
+    margin: 10px 10px 8px 20px;
+  }
+}
+
+.article{
+  width: 700px;
+  margin: 0 auto;
 }
