--- a/6s/ra-men2/css/style.css
+++ b/6s/ra-men2/css/style.css
@@ -27,8 +27,7 @@ ul.hmenu a {
 }
 
 ul.hmenu a:hover {
-  background-color: #FB88A0;
-  color: #6A0204;
+  background-color: #C80000;
 }
 
 ul.hmenu a.active {
@@ -44,8 +43,35 @@ ul.hmenu a.active {
   margin: 10px 10px 8px 20px;
 }
 
-.article {
+main.article {
   width: 700px;
   margin: 0 auto;
+}
+
+main.article section {
+  margin-top: 20px;
+}
+
+main.article section.card {
+  padding: 5px 10px;
+  -webkit-box-shadow: 0 2px 5px rgba(0, 0, 0, 0.5);
+          box-shadow: 0 2px 5px rgba(0, 0, 0, 0.5);
+}
+
+main.article section.card h2 {
+  margin-top: 5px;
+}
+
+main.article img.top {
+  width: 100%;
+}
+
+main.article .first-color::first-letter {
+  color: red;
+}
+
+main.article .map {
+  width: 100%;
+  height: 500px;
 }
 /*# sourceMappingURL=style.css.map */
