--- a/6s/ra-men2/css/style.scss
+++ b/6s/ra-men2/css/style.scss
@@ -43,7 +43,7 @@ ul {
 
   .logo{
     height: 50px;
-    margin: 10px 10px 8px 20px;
+    margin: 10px 10px 8px 30px;
   }
 }
 
@@ -56,6 +56,7 @@ main.article{
 
     &.card{
       padding: 5px 10px;
+      border-radius: 1px;
       box-shadow: 0 2px 5px rgba(0,0,0,0.5);
 
       h2{
@@ -74,7 +75,9 @@ main.article{
     }
   }
 
-
+  p{
+    line-height: 1.6;
+  }
 
   .map{
     width: 100%;
