レスポンシブ、地図対応

--- a/6s/ra-men2/css/style.css
+++ b/6s/ra-men2/css/style.css
@@ -2,6 +2,7 @@
 body {
   margin: 0;
   padding: 0;
+  width: 100%;
 }
 
 ul.hmenu {
@@ -36,16 +37,37 @@ ul.hmenu a.active {
 
 .header {
   background-color: black;
+  width: 100%;
 }
 
 .header .logo {
-  height: 50px;
+  height: 40px;
   margin: 10px 10px 8px 30px;
 }
 
+@media screen and (max-width: 640px) {
+  .header .logo {
+    margin-left: 10px;
+    width: 90%;
+    height: auto;
+  }
+}
+
 main.article {
-  width: 700px;
+  width: 750px;
   margin: 0 auto;
+}
+
+@media screen and (max-width: 768px) {
+  main.article {
+    width: 95%;
+  }
+}
+
+@media screen and (max-width: 640px) {
+  main.article h1 {
+    font-size: 1.7rem;
+  }
 }
 
 main.article section {
@@ -72,7 +94,7 @@ main.article .first-color::first-letter {
 }
 
 main.article p {
-  line-height: 1.6;
+  line-height: 1.7;
 }
 
 main.article .map {
