--- a/6s/ra-men2/css/style.css
+++ b/6s/ra-men2/css/style.css
@@ -101,4 +101,8 @@ main.article .map {
   width: 100%;
   height: 500px;
 }
+
+footer {
+  text-align: center;
+}
 /*# sourceMappingURL=style.css.map */
