サイズ、IEバグ修正

--- a/6s/ra-men2/css/style.scss
+++ b/6s/ra-men2/css/style.scss
@@ -67,8 +67,8 @@ ul {
   }
 }
 
-main.article{
-  width: 750px;
+div.article{
+  width: 800px;
   margin: 0 auto;
   @include mq(md){
     width: 95%;
