--- a/6s/ra-men2/css/style.css
+++ b/6s/ra-men2/css/style.css
@@ -53,51 +53,51 @@ ul.hmenu a.active {
   }
 }
 
-main.article {
-  width: 750px;
+div.article {
+  width: 800px;
   margin: 0 auto;
 }
 
 @media screen and (max-width: 768px) {
-  main.article {
+  div.article {
     width: 95%;
   }
 }
 
 @media screen and (max-width: 640px) {
-  main.article h1 {
+  div.article h1 {
     font-size: 1.7rem;
   }
 }
 
-main.article section {
+div.article section {
   margin-top: 20px;
 }
 
-main.article section.card {
+div.article section.card {
   padding: 5px 10px;
   border-radius: 1px;
   -webkit-box-shadow: 0 2px 5px rgba(0, 0, 0, 0.5);
           box-shadow: 0 2px 5px rgba(0, 0, 0, 0.5);
 }
 
-main.article section.card h2 {
+div.article section.card h2 {
   margin-top: 5px;
 }
 
-main.article img.top {
+div.article img.top {
   width: 100%;
 }
 
-main.article .first-color::first-letter {
+div.article .first-color::first-letter {
   color: red;
 }
 
-main.article p {
+div.article p {
   line-height: 1.7;
 }
 
-main.article .map {
+div.article .map {
   width: 100%;
   height: 500px;
 }
