--- a/6s/ra-men2/css/style.scss
+++ b/6s/ra-men2/css/style.scss
@@ -117,3 +117,57 @@ div.article{
 footer{
   text-align: center;
 }
+
+.tile-wrapper{
+  display: grid;
+  grid-gap: 10px;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-rows: auto;
+  
+  @include mq(md){
+    grid-template-columns: 1fr 1fr;
+  }
+  @include mq(sm){
+    grid-template-columns: 1fr;
+  }
+
+  .tile{
+    position: relative;
+    z-index: 1; /* 必要であればリンク要素の重なりのベース順序指定 */
+    background: #eee;
+    padding: 15px;
+    font-size: 12px;
+    overflow: auto;
+    box-shadow: 0 1px 2px rgba(0,0,0,0.5);
+    border-radius: 3px;
+
+    @include mq(md){
+      width: 60%;
+      max-width: 220px;
+      margin: 20px auto 0 auto;
+    }
+
+    @include mq(sm){
+      width: 80%;
+    }
+
+    img{
+      height: 115px;
+      border-radius: 1px;
+    }
+
+    &:hover{
+      box-shadow: 0 2px 5px rgba(0,0,0,0.5);
+    }
+
+    a{
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      z-index: 2;
+      text-indent:-999px;
+    }
+  }
+}
